# santa_tavern_2025

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: main.py
santas_tavern/: __init__.py  config.py  models.py
santas_tavern/agents/: __init__.py  encounter_smith.py  loot_elf.py  lore_keeper.py  lore_n_background.py  planner.py  rules_safety_elf.py  story_weaver.py
santas_tavern/cli/: generate.py
santas_tavern/rag/: __init__.py
santas_tavern/tools/: lore.py  monsters.py
tests/: judge.py  test_generate_adventure.py  test_rag.py
tests/lore_test_data/: aldric.md  party.md  vex_background.md
